# eink-devdash

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SETUP.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docker-publish.yml  pages.yml  relay-deploy.yml
api/: Dockerfile  package-lock.json  package.json  tsconfig.json
api/src/: app.test.ts  app.ts  dashboard-coordinator.test.ts  dashboard-coordinator.ts  index.ts
api/src/relay/: relay-client.test.ts  relay-client.ts
api/src/routes/: dashboard.test.ts  dashboard.ts  ota.test.ts  ota.ts
api/src/services/: antigravity.service.test.ts  antigravity.service.ts  claude-credentials.test.ts  claude-credentials.ts  claude.service.test.ts  claude.service.ts  code-host.adapters.ts  code-host.config.ts  (+14 more)
docs/decisions/: 0001-provisioning-transport.md  0002-softap-portal-captive-qr.md  0003-red-free-bw-partial-refresh.md  0004-local-push-transports.md  0005-ota-updates.md  0006-quiet-hours.md  0007-relay-on-demand-transport.md
docs/design-prompts/: v4-provisioning.md
docs/plans/: 2026-06-03-bw-partial-alert-policy.md  2026-06-06-relay-ota-manifest.md  2026-06-07-relay-on-demand-transport.md  2026-06-09-nvs-per-network-blobs.md  2026-06-09-portal-reorder.md  2026-06-09-relay-setup-identity-prompt.md  2026-06-10-codex-overage-spend-metric.md  2026-06-11-live-usage-credits.md  2026-06-11-locale-amount-formatting.md
docs/reviews/: 2026-05-21-codebase-review.md
firmware/: BOARD_NOTES.md  CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
firmware/main/: CMakeLists.txt  Kconfig.projbuild  api_client.c  api_client.h  boot_button.c  boot_button.h  display.c  display.h  idf_component.yml  improv.c  improv.h  main.c  ota_client.c  ota_client.h  ota_version.c  ota_version.h  runtime_policy.c  runtime_policy.h  storage.c  storage.h  timekeep.c  timekeep.h  unreachable_diag.h  wifi_prov.c  wifi_prov.h  wifi_roam.c  wifi_roam.h
firmware/test/: CMakeLists.txt  README.md
firmware/test/main/: CMakeLists.txt  test_ota_version.c
flash-server/: config-ui.js  flashed.html  improv-protocol.js  index.html  manifest.json  serve.sh  styles.css  watch.sh
relay/: .dockerignore  package-lock.json  package.json  setup.Dockerfile  tsconfig.json  vitest.config.ts  wrangler.toml
relay/scripts/: setup-helpers.mjs  setup.mjs  show-qr.mjs
relay/src/: index.ts
relay/test/: relay.test.ts  setup-helpers.test.ts
scripts/: render-readme-screens.mjs  usbip-attach.sh  usbip-share.sh
(+3 files in other folders)
