idf_component_register(
    SRCS
        "main.c"
        "display.c"
        "wifi_prov.c"
        "wifi_roam.c"
        "improv.c"
        "api_client.c"
        "storage.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_wifi
        esp_http_client
        esp_http_server
        nvs_flash
        driver
        esp_driver_usb_serial_jtag
        vfs
        json
        eink_weact29
)
