idf_component_register(
    SRCS
        "main.c"
        "display.c"
        "wifi_prov.c"
        "wifi_roam.c"
        "captive_dns.c"
        "api_client.c"
        "storage.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_wifi
        esp_http_client
        esp_http_server
        esp_timer
        nvs_flash
        driver
        vfs
        json
        eink_weact29
        espressif__qrcode
)
